force-app/main/default/objects/PersonDetail__c/fields/ParentAccount__c.field-meta.xml
<CustomField>
    <fullName>ParentAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ParentAccount</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>PersonDetails</relationshipLabel>
    <relationshipName>PersonDetails</relationshipName>
    <type>Lookup</type>
</CustomField>