force-app/main/default/objects/PersonDetail__c/fields/PersonEmployeeID__c.field-meta.xml
<CustomField>
    <fullName>PersonEmployeeID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PersonEmployeeID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>