force-app/main/default/objects/PersonDetail__c/fields/PersonPhone__c.field-meta.xml
<CustomField>
    <fullName>PersonPhone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PersonPhone</label>
    <type>Phone</type>
</CustomField>